--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -51,6 +51,7 @@
 		<button id="ID_VIEW_MEDIA"/>
 		<button id="ID_TAB_IRC"/>
 		<button id="ID_VIEW_SECURITY"/>
+		<button id="ID_VIEW_SCHEDULER"/>
 		<button id="ID_VIEW_HOSTS"/>
 		<button id="ID_VIEW_DISCOVERY"/>
 		<button id="ID_VIEW_TRAFFIC"/>
@@ -372,6 +373,7 @@
 		<separator/>
 		<button id="ID_NEIGHBOURS_SETTINGS" text="Settings"/>
 	</toolbar>
+	<!-- SECURITY WINDOW -->
 	<toolbar name="CSecurityWnd">
 		<button id="ID_SECURITY_EDIT" text="Edit Rule"/>
 		<separator/>
@@ -384,6 +386,21 @@
 		<button id="ID_SECURITY_RESET" text="Reset List"/>
 		<button id="ID_SECURITY_IMPORT" text="Import List"/>
 		<button id="ID_SECURITY_EXPORT" text="Export List"/>
+	</toolbar>
+	<!-- SCHEDULER WINDOW -->
+	<toolbar name="CSchedulerWnd">
+		<button id="ID_SCHEDULER_EDIT" text="Edit Task"/>
+		<separator/>
+		<button id="ID_SCHEDULER_ACTIVATE" text="Activate"/>
+		<button id="ID_SCHEDULER_DEACTIVATE" text="Deactivate"/>
+		<separator/>
+		<button id="ID_SCHEDULER_ADD" text="Add Task"/>
+		<button id="ID_SCHEDULER_REMOVE" text="Remove Task"/>
+		<separator/>
+		<button id="ID_SCHEDULER_REMOVE_ALL" text="Remove All"/>
+		<rightAlign/>
+		<button id="ID_SCHEDULER_IMPORT" text="Import List"/>
+		<button id="ID_SCHEDULER_EXPORT" text="Export List"/>
 	</toolbar>
 	<!-- HIT MONITOR WINDOW -->
 	<toolbar name="CHitMonitorWnd">
@@ -513,6 +530,7 @@
 				<item id="ID_VIEW_SECURITY" text="Se_curity"/>
 				<item id="ID_VIEW_HOSTS" text="H_ost Cache"/>
 				<item id="ID_VIEW_DISCOVERY" text="Disco_very"/>
+				<item id="ID_VIEW_SCHEDULER" text="Sch_eduler"/>
 			</menu>
 			<separator/>
 			<item id="ID_VIEW_BASIC" text="_Basic Mode"/>
@@ -586,6 +604,7 @@
 			<separator/>
 			<item id="ID_VIEW_SECURITY" text="Se_curity"/>
 			<item id="ID_VIEW_HOSTS" text="H_ost Cache"/>
+			<item id="ID_VIEW_SCHEDULER" text="Sch_eduler"/>
 			<separator/>
 			<menu text="A_dvanced">
 				<item id="ID_VIEW_SYSTEM" text="S_ystem" shortcut="F11"/>
@@ -600,6 +619,7 @@
 				<item id="ID_VIEW_HOSTS" text="H_ost Cache" shortcut="F8"/>
 				<item id="ID_VIEW_DISCOVERY" text="Disco_very" shortcut="F9"/>
 				<item id="ID_VIEW_TRAFFIC" text="_Graph" shortcut="F10"/>
+				<item id="ID_VIEW_SCHEDULER" text="Sch_eduler" shortcut="Ctrl+Shift+F11"/>
 				<separator/>
 				<item id="ID_VIEW_PACKETS" text="_Packet Dump" shortcut="Ctrl+F1"/>
 				<item id="ID_VIEW_SEARCH_MONITOR" text="Se_arch Monitor" shortcut="Ctrl+F2"/>
@@ -692,6 +712,7 @@
 			<item id="ID_VIEW_HOSTS" text="H_ost Cache" shortcut="F8"/>
 			<item id="ID_VIEW_DISCOVERY" text="Disco_very" shortcut="F9"/>
 			<item id="ID_VIEW_TRAFFIC" text="_Graph" shortcut="F10"/>
+			<item id="ID_VIEW_SCHEDULER" text="Sch_eduler" shortcut="Ctrl+Shift+F11"/>
 			<separator/>
 			<item id="ID_VIEW_PACKETS" text="_Packet Dump" shortcut="Ctrl+F1"/>
 			<item id="ID_VIEW_SEARCH_MONITOR" text="Se_arch Monitor" shortcut="Ctrl+F2"/>
@@ -768,6 +789,7 @@
 			<item id="ID_VIEW_UPLOADS" text="_Uploads"/>
 			<item id="ID_VIEW_SECURITY" text="_Security"/>
 			<item id="ID_VIEW_HOSTS" text="_Host Cache"/>
+			<item id="ID_VIEW_SCHEDULER" text="Sch_eduler"/>
 		</menu>
 	</menu>
 	<menu name="CMainWnd.View.Tabbed">
@@ -783,6 +805,7 @@
 		<item id="ID_VIEW_HOSTS" text="_Host Cache"/>
 		<item id="ID_VIEW_DISCOVERY" text="Disco_very"/>
 		<item id="ID_VIEW_TRAFFIC" text="_Graph"/>
+		<item id="ID_VIEW_SCHEDULER" text="Sch_eduler"/>
 		<separator/>
 		<item id="ID_VIEW_PACKETS" text="_Packet Dump"/>
 		<item id="ID_VIEW_SEARCH_MONITOR" text="Se_arch Monitor"/>
@@ -802,6 +825,7 @@
 		<item id="ID_VIEW_HOSTS" text="_Host Cache"/>
 		<item id="ID_VIEW_DISCOVERY" text="Disco_very"/>
 		<item id="ID_VIEW_TRAFFIC" text="_Graph"/>
+		<item id="ID_VIEW_SCHEDULER" text="Sch_eduler"/>
 		<separator/>
 		<item id="ID_VIEW_PACKETS" text="_Packet Dump"/>
 		<item id="ID_VIEW_SEARCH_MONITOR" text="Se_arch Monitor"/>
@@ -854,6 +878,7 @@
 			<item id="ID_VIEW_UPLOADS" text="_Uploads"/>
 			<item id="ID_VIEW_SECURITY" text="_Security"/>
 			<item id="ID_VIEW_HOSTS" text="_Host Cache"/>
+			<item id="ID_VIEW_SCHEDULER" text="Sch_eduler"/>
 		</menu>
 	</menu>
 	<menu name="CHomeWnd.Tabbed">
@@ -869,6 +894,7 @@
 		<item id="ID_VIEW_HOSTS" text="_Host Cache"/>
 		<item id="ID_VIEW_DISCOVERY" text="Disco_very"/>
 		<item id="ID_VIEW_TRAFFIC" text="_Graph"/>
+		<item id="ID_VIEW_SCHEDULER" text="Sch_eduler"/>
 		<separator/>
 		<item id="ID_VIEW_PACKETS" text="_Packet Dump"/>
 		<item id="ID_VIEW_SEARCH_MONITOR" text="Se_arch Monitor"/>
@@ -1540,6 +1566,21 @@
 		<separator/>
 		<item id="ID_SECURITY_EDIT" text="_Properties"/>
 	</menu>
+	<!-- SCHEDULER WINDOW -->
+	<menu name="CSchedulerWnd">
+		<item id="ID_SCHEDULER_ADD" text="_Add Scheduled Task"/>
+		<separator/>
+		<item id="ID_SCHEDULER_ACTIVATE" text="A_ctivate"/>
+		<item id="ID_SCHEDULER_DEACTIVATE" text="_Deactivate"/>
+		<separator/>
+		<item id="ID_SCHEDULER_REMOVE" text="R_emove"/>
+		<item id="ID_SCHEDULER_EDIT" text="_Edit"/>
+		<separator/>
+		<item id="ID_SCHEDULER_REMOVE_ALL" text="Remove Al_l"/>
+		<separator/>
+		<item id="ID_SCHEDULER_IMPORT" text="_Import..."/>
+		<item id="ID_SCHEDULER_EXPORT" text="E_xport..."/>
+	</menu>
 	<!-- DISCOVERY SERVICES WINDOW -->
 	<menu name="CDiscoveryWnd">
 		<item id="ID_DISCOVERY_QUERY" text="_Query Now"/>
@@ -1932,10 +1973,6 @@
 		<link target="raza:page:CRemoteSettingsPage" format="b">Remote:</link>
 		<gap size="4"/>
 		<text>Set up the ability to control Shareaza remotely through a web browser.</text>
-		<newline gap="10"/>
-		<link target="raza:page:CSchedulerSettingsPage" format="b">Scheduler:</link>
-		<gap size="4"/>
-		<text>Limit download connections based on a periodic schedule.</text>
 	</document>
 	<!-- Browse User Profile -->
 	<document name="CBrowseHostProfile.1">
@@ -2635,6 +2672,24 @@
 	<string id="WINDOW_SEARCHPAD" value="Search"/>
 	<string id="WINDOW_HELP" value="Shareaza Help"/>
 	<string id="WINDOW_IRC" value="Shareaza Chat"/>
+	<string id="WINDOW_SCHEDULER" value="Scheduler"/>
+	<string id="154" value="Are you sure you want to remove all scheduled tasks? This cannot be undone."/>
+	<string id="156" value="Scheduled time has already passed.\n\nPlease select a time in the future."/>
+	<string id="157" value="Bandwidth: Full Speed"/>
+	<string id="158" value="Bandwidth: Reduced Speed"/>
+	<string id="159" value="Bandwidth: Stop"/>
+	<string id="160" value="System: Exit Shareaza"/>
+	<string id="161" value="System: Disconnect Dial-up Connection"/>
+	<string id="162" value="System: Turn Off the Computer"/>
+	<string id="163" value="Please select a task."/>
+	<string id="164" value="Specific day(s) of week"/>
+	<string id="165" value="Active"/>
+	<string id="166" value="Inactive"/>
+	<string id="167" value="Done"/>
+	<string id="168" value="Waiting..."/>
+	<string id="169" value="No Tasks Currently Scheduled"/>
+	<string id="172" value="Done Today"/>
+	<string id="173" value="You should select at least one day of week."/>
 	<string id="7000" value="Are you sure you want to delete this filter ?"/>
 	<string id="7001" value="&amp;Schemas"/>
 	<string id="7002" value="Multiple Values"/>
@@ -3584,27 +3639,42 @@
 		<control caption="Choose a Password:"/>
 		<control/>
 	</dialog>
-	<dialog name="CSchedulerSettingsPage" cookie="BuBuEdmsBuBuStStStStStStStStStStStEdBuSt" caption="Scheduler">
-		<control caption="_Options:"/>
-		<control caption=" _Enable scheduler"/>
+	<dialog name="CScheduleTaskDlg" cookie="BuBuBuBuSySyBuBuBuBuBuBuBuBuCoEdmsEdmsEdmsBuBuEdBuStStStStStStStBuBu" caption="Schedule Item">
+		<control caption="OK"/>
+		<control caption="Cancel"/>
+		<control caption="Only once"/>
+		<control caption="On specific day(s) of week"/>
 		<control/>
 		<control/>
-		<control caption="_Connect to only G2 when limited"/>
-		<control caption="Key:"/>
-		<control caption="Sun"/>
-		<control caption="Mon"/>
-		<control caption="Tue"/>
-		<control caption="Wed"/>
-		<control caption="Thu"/>
-		<control caption="Fri"/>
-		<control caption="Sat"/>
-		<control caption="Do not connect"/>
-		<control caption="Limited connection"/>
-		<control caption="Connect at full speed"/>
-		<control caption="% of _bandwidth when limited"/>
+		<control caption="Sunday"/>
+		<control caption="Monday"/>
+		<control caption="Tuesday"/>
+		<control caption="Wednesday"/>
+		<control caption="Thursday"/>
+		<control caption=" Friday"/>
+		<control caption="Saturday"/>
+		<control caption="All"/>
 		<control/>
-		<control caption="Help"/>
-		<control caption="The scheduler is designed to allow you to set times when Shareaza will connect and download files. {n}{n}{n}Note: If you have Shareaza open while the scheduler is active, you may see it changing settings- This is normal!"/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
+		<control/>
+		<control caption=" _Toggle bandwidth independently"/>
+		<control caption=" _Limit network to Gnutella2"/>
+		<control/>
+		<control caption="Make this event active"/>
+		<control caption="Please select a date:"/>
+		<control caption="Please select a time:"/>
+		<control caption="Select the event type:"/>
+		<control caption="Description: (optional)"/>
+		<control caption="% of _bandwidth under limit"/>
+		<control caption="% of _download under limit"/>
+		<control caption="% of _upload under limit"/>
+		<control caption="Days Of Week"/>
+		<control caption="Run this event"/>
+		<control/>
 	</dialog>
 	<dialog name="CNetworksSettingsPage" cookie="StBuStBuStBuStBuStBuStBuSt" caption="Networks">
 		<control caption="Shareaza is a general-purpose file-sharing application that can access many P2P networks at the same time.  On this page you can select which P2P networks you want to connect to, and then adjust specific settings for each network."/>
