Translated "New Folder" title of newly created album + some optimizations. Added all .po-files and utility.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8607 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -3402,6 +3402,7 @@
 	<string id="20242" value="Try Again"/>
 	<string id="20243" value="Continue"/>
 	<string id="20244" value="&amp;Remember my selection next time"/>
+	<string id="20245" value="New Folder"/>
 	<string id="32825" value="Open my folder of completed Downloads"/>
 	<string id="32773" value="Check for new version"/>
 	<string id="61215" value="Activate this window"/>
