--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -3381,6 +3381,7 @@
 		<string id="20242" value="Повторить снова"/>
 		<string id="20243" value="Продолжить"/>
 		<string id="20244" value="&amp;Запомнить мой выбор на будущее"/>
+		<string id="20245" value="Новая папка"/>
 		<string id="32825" value="Открыть папку с завершёнными загрузками"/>
 		<string id="32773" value="Проверить новую версию"/>
 		<string id="61215" value="Переключиться на это окно"/>
