Fixed crash caused by bad Italian translation.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8642 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-it.po
+++ b/Languages/default-it.po
@@ -5424,7 +5424,7 @@ msgstr "Richiesta GIV malformattata %s ricevuta, chiusura della connessione."
 
 #: string;16285
 msgid "Received an unnecessary push connection from %s."
-msgstr "GIV sconosciuto da %s per il file \"%s\" ricevuto, chiusura della connessione."
+msgstr "Richiesta GIV sconosciuto da %s ricevuto, chiusura della connessione."
 
 #: string;16286
 msgid "Host %s is pushing download \"%s\", accepting."
@@ -9785,3 +9785,4 @@ msgstr "Utente"
 #: column;comments
 msgid "Comments"
 msgstr "Commenti"
+
