DC++ URL support ( http://sourceforge.net/apps/phpbb/shareaza/viewtopic.php?f=13&t=908 )
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@8805 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -3550,7 +3550,7 @@
 			<control caption="Port:"/>
 			<control/>
 		</dialog>
-		<dialog name="CWebSettingsPage" cookie="BuStBuBuBuBuBuBuBuCoBuBuSt" caption="Web">
+		<dialog name="CWebSettingsPage" cookie="BuStBuBuBuBuBuBuBuBuCoBuBuSt" caption="Web">
 			<control caption="_Peer to Peer Link Handling:"/>
 			<control caption="Use Shareaza to open these types of links:"/>
 			<control caption="Magnet ( magnet: )"/>
@@ -3558,6 +3558,7 @@
 			<control caption="eDonkey ( ed2k: )"/>
 			<control caption="Piolet ( mp2p: )"/>
 			<control caption="BitTorrent ( .torrent )"/>
+			<control caption="DC++ ( dchub: )"/>
 			<control caption="_Download Manager:"/>
 			<control caption="Use Shareaza to manage all my web downloads:"/>
 			<control/>
